2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/ExtensionContext.cs:
	* Mono.Addins.Description/ExtensionPoint.cs: Use generics.

	* Mono.Addins.Description/ExtensionNodeDescription.cs: Fix bug
	  in RemoteAttribute.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Update.

	* Mono.Addins/TreeNode.cs:
	* Mono.Addins/RuntimeAddin.cs:
	* Mono.Addins/ExtensionTree.cs:
	* Mono.Addins.Description/ModuleDescription.cs: Improved lazy
	  loading of optional modules.

	* Mono.Addins/AddinManager.cs:
	* Mono.Addins/ExtensionContext.cs:
	* Mono.Addins/ExtensionNodeList.cs: Added some generic methods
	  for querying extension points.

	* Mono.Addins/ExtensionNode.cs: Improved lazy loading of
	  optional modules. Added some generic methods for querying
	  extension points.

	* Mono.Addins.Description/ObjectDescriptionCollection.cs:
	  Added Insert method.

2010-02-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/RuntimeAddin.cs: When loading the assemblies of
	  an add-in, make sure the assemblies of the add-ins on which
	  it depends are also loaded.

2010-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/RuntimeAddin.cs: Remove debug spew.

2010-02-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/RuntimeAddin.cs:
	* Mono.Addins/AddinSessionService.cs: Improve delayed loading
	  of assemblies.

2010-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/AddinManager.cs:
	* Mono.Addins/AddinRegistry.cs: Update the registry when the
	  domain of a directory can't be retrieved for some reason
	  (for example, if the registry has been cleaned)

2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinDatabase.cs: Add missing null
	  check.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Description/Extension.cs: Allow Not condition.

	* Mono.Addins.Database/AddinUpdateData.cs: Added some verbose
	  logging.

	* Mono.Addins.Database/AddinScanner.cs: